--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -58,7 +58,13 @@ body
 	position: fixed
 	top: 0
 	width: 100%
+	transition: all .3s ease-in-out
 	background: url(../img/bg.png) repeat-x
+	height: 300px
+	z-index: 2
+	&.active
+		height: 75px
+		padding-top: 5px
 	&-logo
 		font-size: 14px
 		text-transform: uppercase
@@ -108,6 +114,184 @@ body
 						text-decoration: none
 
 .hero
-	background: url(../img/hero.jpg) no-repeat center top
+	background: url(../img/hero.jpg) no-repeat center top $blue
+	background-size: cover
+	height: 100%
+	position: relative
+	// background-blend-mode: soft-light
+	&-title
+		position: absolute
+		margin: auto auto
+		left: 0
+		right: 0
+		top: 0
+		bottom: 0
+		font-size: 75px
+		font-weight: 500
+		line-height: 100%
+		margin-top: 300px
+		width: 460px
+		&:after
+			content: ""
+			display: block
+			position: absolute
+			top: 10px
+			right: -730px
+			background: url(../img/line.svg) no-repeat
+			height: 520px
+			width: 1340px
+			margin: auto
+
+.grid
+	.col-xs-12
+		padding-left: 0
+		padding-right: 0
+	&-title
+		font-size: 20px
+		font-weight: 500
+		text-align: right
+		line-height: 100%
+		text-transform: uppercase
+		padding: 70px 0
+	&-etc
+		text-align: right
+		padding: 30px 0
+		font-weight: 500
+		a
+			font-size: 14px
+			color: $black
+			text-transform: uppercase
+			text-decoration: none
+	&-item		
+		height: 380px
+		display: flex
+		.date
+			font-size: 14px
+			font-weight: 300
+		.title
+			line-height: 120%
+			font-size: 24px
+			margin-top: 20px
+		.text
+			margin-top: 20px
+			font-size: 14px
+			font-weight: 300
+		.views
+			position: absolute
+			font-size: 14px
+			right: 20px
+			bottom: 30px
+		.link
+			margin-top: 20px
+			a
+				border-bottom: 2px solid
+				transition: all .3s ease-in-out
+				padding-bottom: 3px
+				font-weight: 300
+				font-size: 14px
+				&:hover,&:focus
+					text-decoration: none
+					border-bottom: 0
+		&-1
+			color: #fff
+			background-color: rgba(0, 0, 0, 0.59)
+			background-blend-mode: soft-light
+			padding: 80px 90px 0
+			justify-content: center
+			align-items: center
+			.title a
+				font-weight: 500
+				color: #fff
+				text-decoration: none
+			.date,.link
+				text-align: center
+			.link a
+				color: $yellow
+		&-2
+			background-color: $yellow
+			padding: 30px 20px
+			.title a
+					font-weight: 300
+					color: $black
+					text-decoration: none
+			.link 
+				position: absolute
+				bottom: 30px
+				left: 20px
+				a
+					color: $black
+		&-3
+			background-color: $blue
+			background-blend-mode: soft-light
+			padding: 30px 90px
+			.date
+				color: #fff
+			.title
+				margin-top: 80px
+				a
+					color: #fff
+					text-decoration: none
+					font-weight: 300
+			.link
+				position: absolute
+				bottom: 30px
+				a
+					color: #fff
+			.views
+				color: #fff
+		&-4
+			background-color: rgba(0, 0, 0, 0.59)
+			background-blend-mode: soft-light
+			padding: 30px 20px
+			.date
+				color: #fff
+			.title
+				margin-top: 80px
+				text-align: center
+				a
+					color: #fff
+					text-decoration: none
+					font-weight: 500
+			.ico
+				color: #fff
+				text-align: center
+				font-size: 25px
+				margin-top: 20px
+			.link
+				text-align: center
+				position: absolute
+				bottom: 30px
+				left: 0
+				right: 0
+				a
+					color: $yellow
+			.views
+				color: #fff
+		&-5
+			background-color: rgba(0, 0, 0, 0.59)
+			background-blend-mode: soft-light
+			background-size: 100%
+			.date
+				background: #e1e1e1
+				padding: 35px 20px 30px 20px
+			.title
+				background: #e1e1e1
+				margin-top: 0
+				padding: 0 20px 30px
+				font-size: 20px
+				a
+					color: $black
+					font-weight: 300
+					text-decoration: none
+			.link
+				position: absolute
+				bottom: 30px
+				left: 30px
+				a
+					color: $yellow
+			.views
+				color: #fff
+
+
 
 @import "media" // Всегда в конце
