index.html done

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -5,11 +5,43 @@
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
 	/**/
-
+	.footer-top-links
+		margin-top: 20px
+		border-top: 1px solid #ddd
+		padding-top: 30px
+	.footer-top-links ul li
+		float: left
+		width: 31.3333%
+		margin-right: 1%
+		margin-left: 1%
+	.footer-top-links ul li a img
+		width: 20%
+		float: left
+		display: block
+		margin-right: 0
+	.footer-top-links ul li a span
+		margin-left: 4%
+		width: 76%
+		float: left
+		display: block
+	.top .top-menuLeft
+		display: none
+	.top .top-menuRight
+		display: none
+	.top .top-menuButton
+		display: block
+	.top .top-mobileMenu
+		display: block
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
+	.grid-item-3 .title
+		margin-top: 20px
+	.grid-item-3
+		padding: 30px 20px
+	.grid-item-1
+		padding: 10px 30px
 
 
 /* Small Devices, Tablets */
@@ -20,12 +52,74 @@
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
-
+	.footer-top-links ul li a
+		height: 60px
+	.footer-top-links ul li a span
+		display: inline-block
+	.footer-top-links ul li a img
+		display: inline-block
+		width: auto
+	.footer-top-links ul li
+		float: none
+		width: 100%
+		margin-bottom: 30px
+	.hero-title
+		font-size: 42px
+		text-align: center
+		width: 100%
+	.grid-item .title a
+		font-size: 20px
+		color: #fff
+	.grid-item
+		height: auto
+		padding: 30px 20px
+	.grid-item .link
+		position: static
+		margin-top: 20px
+	.grid-item .date,
+	.grid-item .title
+		background: none
+		color: #fff
+		padding: 0
+	.grid-item .title
+		margin-top: 10px
+	.grid-title
+		padding: 30px 0
+	.grid-item-6 .title a
+		color: $black
+	.grid-item-6 > div,
+	.grid-item-7 > div
+		width: 100%
+		max-width: 100
+	.grid-item-7 .title a
+		color: #fff
+	.grid-item-7
+		padding: 40px 20px
+	.grid-etc
+		padding: 15px 0
+	.top
+		padding-top: 20px
+	.footer-top-main
+		margin-top: 30px
+	.footer-top
+		padding-top: 40px
+		padding-bottom: 20px
+	.footer-bottom-dev
+		text-align: left
+	.hero-title
+		margin-top: 240px
+	.grid-item-2 .title a
+		color: $black
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
-
+	.top-logo
+		padding-left: 51px
+		background-size: 40px
+	.hero-title:after
+		top: -170px
+		right: -940px
 
 /*==========  Mobile First  ==========*/
 
