--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -57,6 +57,7 @@ body
 	padding-top: 47px
 	position: fixed
 	top: 0
+	z-index: 99999
 	width: 100%
 	transition: all .3s ease-in-out
 	background: url(../img/bg.png) repeat-x
@@ -65,6 +66,8 @@ body
 	&.active
 		height: 75px
 		padding-top: 5px
+		box-shadow: 0 0 10px rgba(#000, .2)
+		z-index: 999
 	&-logo
 		font-size: 14px
 		text-transform: uppercase
@@ -78,45 +81,165 @@ body
 		div
 			text-transform: capitalize
 			font-weight: 300
-	&-menuLeft
+	&-menuButton
+		text-align: right
+		display: none
+		padding-top: 5px
+	&-mobileMenu
+		position: fixed
+		top: 0
+		width: 260px
+		left: -100%
+		background: $yellow
+		height: 100%
+		transition: all .6s ease
+		box-shadow: 0 0 20px rgba(#000, .2)
+		&.active
+			left: 0
 		ul
+			list-style: none
+			padding-left: 0
 			li
+				margin-bottom: 10px
+				&.has-child 
+					& > a:after
+						content: ""
+						display: block
+						position: absolute
+						right: 20px
+						top: 9px
+						width: 14px
+						height: 8px
+						background: url(../img/chevron.svg) no-repeat center
+						background-size: 14px
+						transition: transform .3s ease
+					&.active
+						a:after
+							transform: rotateX(180deg)
+				a
+					color: $black
+					display: block
+					padding: 0 30px
+					position: relative
+
+					&:hover,&:focus
+						text-decoration: none
+					+ ul
+						position: relative
+						overflow-x: hidden
+						padding: 10px 20px 0
+						margin: 10px 0
+						display: none
+						&:before
+							content: ""
+							display: block
+							width: 400%
+							height: 100%
+							background: rgb(254, 191, 0)
+							position: absolute
+							left: -100%
+							top: 0
+						li
+							a
+								position: relative
+
+		hr
+			border-color: rgba($black, .1)
+	&-menuLeft
+		> ul
+			> li
 				display: inline-block
 				margin-right: 20px
 				&:last-child
 					margin-right: 0
-				a
+				&:hover 
+					a
+						border-color: $blue
+					> ul
+						display: block
+				> a
 					font-size: 14px
 					font-weight: 500
 					text-transform: uppercase
+					display: block
 					color: $black
 					transition: all .2s ease-in-out
+					border-bottom: 2px solid rgba(#fff, 0)
 					&:hover,&:focus
 						color: $blue
 						text-decoration: none
+				> ul
+					position: absolute
+					list-style: none
+					display: none
+					margin: 0
+					padding-left: 0
+					background: rgba($black, .9)
+					font-size: 14px
+					padding: 15px 30px
+					li
+						margin-bottom: 8px
+						&:last-child
+							margin-bottom: 0
+						a
+							color: #fff
+							font-weight: 300
+							transition: color .3s ease
+							&:hover,&:focus
+								color: $blue
+								text-decoration: none
+
+
 	&-menuRight
-		ul
-			li
+		> ul
+			> li
 				display: inline-block
 				margin-right: 20px
 				&:last-child
 					margin-right: 0
 					a
-						border-bottom: 2px solid $yellow
-						padding-bottom: 2px
-				a
+						border-color: $yellow
+				&:hover 
+					a
+						border-color: $yellow
+					> ul
+						display: block
+				> a
 					font-size: 14px
 					font-weight: 300
+					display: block
 					color: $black
 					transition: all .2s ease-in-out
+					border-bottom: 2px solid rgba(#fff, 0)
 					&:hover,&:focus
 						color: $yellow
 						text-decoration: none
+				> ul
+					position: absolute
+					list-style: none
+					display: none
+					margin: 0
+					padding-left: 0
+					background: rgba($black, .9)
+					font-size: 14px
+					padding: 15px 30px
+					li
+						margin-bottom: 8px
+						&:last-child
+							margin-bottom: 0
+						a
+							color: #fff
+							font-weight: 300
+							transition: color .3s ease
+							&:hover,&:focus
+								color: $blue
+								text-decoration: none
 
 .hero
 	background: url(../img/hero.jpg) no-repeat center top $blue
 	background-size: cover
 	height: 100%
+	overflow: hidden
 	position: relative
 	// background-blend-mode: soft-light
 	&-title
@@ -165,6 +288,11 @@ body
 	&-item		
 		height: 380px
 		display: flex
+		transition: all .5s ease-in-out
+		z-index: 2
+		background-size: cover
+		&:hover
+			
 		.date
 			font-size: 14px
 			font-weight: 300
@@ -211,9 +339,9 @@ body
 			background-color: $yellow
 			padding: 30px 20px
 			.title a
-					font-weight: 300
-					color: $black
-					text-decoration: none
+				font-weight: 300
+				color: $black
+				text-decoration: none
 			.link 
 				position: absolute
 				bottom: 30px
@@ -291,7 +419,178 @@ body
 					color: $yellow
 			.views
 				color: #fff
+		&-6
+			background-size: cover
+			padding: 30px 30px
+			position: relative
+			height: 320px
+			> div
+				z-index: 1
+				max-width: 50%
+			&:before
+				content: ""
+				width: 100%
+				height: 100%
+				display: block
+				background: url(../img/bg-w.png) repeat-y left
+				opacity: .8
+				position: absolute
+				top: 0
+				left: 0
+				z-index: 1
+			.title a
+				font-size: 24px
+				color: $black
+				font-weight: 300
+				&:hover,&:focus
+					text-decoration: none
+			.text
+				font-size: 14px
+				margin-top: 20px
+				font-weight: 300
+				line-height: 120%
+			.link
+				position: absolute
+				bottom: 30px
+				left: 30px
+				a
+					color: $black
+					font-weight: 400
+		&-7
+			padding: 80px 30px 0
+			background-color: rgba(0, 0, 0, 0.5)
+			background-blend-mode: soft-light
+			background-size: cover
+			color: #fff
+			height: 320px
+			.title
+				a
+					color: #fff
+					&:hover,&:focus
+						text-decoration: none
+			.text
+			.link
+				position: absolute
+				left: 30px
+				bottom: 30px
+				a
+					color: #fff
 
+.footer-top
+	background: #f0f0f0
+	padding: 60px 0
+	&-menu
+		.title
+			font-size: 14px
+			font-weight: 600
+			color: $blue
+			text-transform: uppercase
+			margin-top: 15px
+			&:first-child
+				margin-top: 0
+		ul
+			margin: 0
+			padding-left: 0
+			margin-top: 5px
+			list-style: none
+			li
+				margin-bottom: 4px
+				a
+					color: $black
+					font-size: 14px
+					font-weight: 300
+					transition: color .3s ease-in-out
+					&:hover,&:focus
+						text-decoration: none
+						color: $blue
+	&-main
+		ul
+			margin: 0
+			padding-left: 0
+			margin-top: 5px
+			list-style: none
+			li
+				margin-bottom: 12px
+				a
+					color: $black
+					font-size: 14px
+					font-weight: 500
+					transition: color .3s ease-in-out
+					&:hover,&:focus
+						text-decoration: none
+						color: $blue
+				> ul
+					padding-left: 20px
+					li 
+						a 
+							font-weight: 300
+							
+	&-links
+		ul
+			list-style: none
+			margin: 0
+			padding-left: 0
+			li
+				margin-bottom: 35px
+				a
+					vertical-align: middle
+					display: block
+					&:hover,&:focus
+						span
+							text-decoration: none
+							color: $blue
+					img
+						display: inline-block
+						margin-right: 10px
+					span
+						font-size: 14px
+						color: $black
+						vertical-align: middle
+						transition: all .3s ease-in-out
+						line-height: 150%
+						font-weight: 300
+						text-transform: uppercase
+						display: inline-block
+						max-width: 250px
+					&:hover,&:focus
+						text-decoration: none
+
+
+.footer-bottom
+	background: #fff
+	padding: 40px 0
+	&-copy
+		font-size: 14px
+		font-weight: 500
+		text-transform: uppercase
+	&-text
+		margin-top: 20px
+		font-size: 12px
+		line-height: 140%
+		font-weight: 400
+	&-links
+		ul
+			margin: 0
+			margin-top: 15px
+			padding-left: 0
+			list-style: none
+			li
+				display: inline-block
+				margin-right: 25px
+				&:last-child
+					margin-right: 0
+				a
+					color: $black
+	&-dev
+		text-align: right
+		font-weight: 300
+		font-size: 14px
+		padding-top: 40px
+		span
+			margin-right: 10px
+		img
+			width: 90px
+	
 
 
 @import "media" // Всегда в конце
