--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -5,6 +5,8 @@
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
 	/**/
+	.grid-item
+		height: 315px
 	.footer-top-links
 		margin-top: 20px
 		border-top: 1px solid #ddd
